# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml
difference_generator/scripts/: gendiff.py
gendiff/: cli.py  engine.py  files_loader.py  gendiff.py  loading.py
gendiff/output_formats/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_diff.py
tests/: test_diff.py
tests/fixtures/: expected_form_json.json
