[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Evgenii T"]
packages = [
  { include = "gendiff" },
]


[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
